# Clipy

./: .gitignore  ClipyClone  LICENSE  README.md  README_ZH.md  build_android_apk.sh  build_app.sh  build_macos_app.sh  build_rust_macos_app.sh  clipy.pen
clipy_macos/: .gitignore  Cargo.toml  README.md  build_macos_app.sh
clipy_macos/Sources/: AppDatabase.swift  CaptureAnnotationPanel.swift  CaptureMagnifierView.swift  CaptureOverlayWindow.swift  CaptureSelectionToolbar.swift  ClipboardManager.swift  CollectorWindow.swift  CompressionUtils.swift  DeviceCollectorManager.swift  DeviceCollectorRepository.swift  HistoryKeychain.swift  HistoryMediaStore.swift  HistoryRepository.swift  HistorySearchIndexBuilder.swift  HistorySearchRanker.swift  HistorySearchStateStore.swift  HistorySearchTypes.swift  HistoryThumbnailCache.swift  ImageDownsampler.swift  ImageOCRService.swift  Localization.swift  LogManager.swift  LogWindow.swift  MemoryFootprintReclaimer.swift  MenuController.swift  NotificationManager.swift  NotificationRepository.swift  NotificationWindow.swift  PinPanelController.swift  PreferencesManager.swift  ScreenCapturePermissionManager.swift  ScreenshotCaptureService.swift  ScreenshotCoordinator.swift  ScreenshotEditorPanel.swift  ScreenshotEditorViewModel.swift  ScreenshotExport.swift  ScreenshotGlobalHotKeyManager.swift  ScreenshotImageProcessor.swift  ScreenshotInlineEditor.swift  ScreenshotSaveService.swift  (+11 more)
clipy_macos/Sources/UI/: AnnotationCanvasView.swift  AppToolbar.swift  AppWindowLayout.swift  CollectorView.swift  CountBadge.swift  DesignTokens.swift  EmptyStateView.swift  HistoryPreviewView.swift  HostingWindow.swift  LeftAlignedTextInput.swift  NotificationView.swift  RelativeTimeFormatter.swift  SearchView.swift  (+6 more)
clipy_macos/scripts/: build_app.sh
clipy_macos/src/: app.rs  constants.rs  main.rs
clipy_macos/ui_reference/: UI_SPEC.md
(+164 files in other folders)
